syntax = "proto3";

option csharp_namespace = "GrpcService";

service GroupService {
  rpc GetGroup (GroupRequest) returns (GroupResponse);
  rpc CreateGroup (CreateGroupRequest) returns (GroupResponse);
  rpc DeleteGroup (DeleteGroupRequest) returns (DeleteGroupResponse);
  rpc UpdateGroup (UpdateGroupRequest) returns (GroupResponse);
}

message GroupRequest {
  int32 id = 1;
}

message GroupResponse {
  int32 id = 1;
  string name = 2;
  int32 teacherId = 3;
}

message CreateGroupRequest {
  string name = 1;
  int32 teacherId = 2;
  repeated int32 students = 3;
}

message DeleteGroupRequest {
  int32 id = 1;
}

message DeleteGroupResponse {
  bool success = 1;
}

message UpdateGroupRequest {
  int32 id = 1;
  string name = 2;
  int32 teacherId = 3;
  repeated int32 students = 4;
}
